--- a/index.html
+++ b/index.html
@@ -32,20 +32,27 @@
     <![endif]-->
   
     <style>
-		div.a {
-		  text-align: center;
-		}
+		div.a {text-align: center;}
 
-		div.b {
-		  text-align: left;
-		}
+		div.b {text-align: left;}
 
-		div.c {
-		  text-align: right;
-		} 
+		div.c {text-align: right;} 
 
 		div.d {text-align: justify;} 
+
+		.clase { text-decoration-color: none;
+				color: #682864;
+				text-decoration: none; }
+				
+		.clase2:hover {
+				color: white;
+				text-decoration: none;
+				}
+
+		a, a:visited {
+    color: inherit;}
 		</style>
+
 
   </head>
 
@@ -151,7 +158,7 @@
 
 				<!-- EDIT: line 1-->
 				<div class="col-lg-5">
-					<p class="tight"><t><img src="icone/UCDavis.jpeg" height="50px" width="50px"/><a href="https://www.coursera.org/specializations/learn-sql-basics-data-science" target="_blank">Learn SQL Basics for Data Science specialization</a></t><br/>
+					<p class="tight"><t><img src="icone/UCDavis.jpeg" height="50px" width="50px"/><a href="https://www.coursera.org/specializations/learn-sql-basics-data-science" target="_blank"> Learn SQL Basics for Data Science specialization</a></t><br/>
 						University of Califorina, Davis - Coursera<br/>
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->5WGYX75KR96Q
 					<!-- </p> -->
@@ -159,24 +166,24 @@
 						- Data Wrangling, Analysis and AB Testing with SQL<br> 
 						- Distributed Computing with Spark SQL<br> 
 						- Capstone Project : "Olympic games data analysis"<!-- </more></p> --><br> 
-				<a href="https://www.coursera.org/account/accomplishments/specialization/certificate/5WGYX75KR96Q" target="_blank">See credential</a>
+				<a style="color:#ff0000;" href="https://www.coursera.org/account/accomplishments/specialization/certificate/5WGYX75KR96Q" target="_blank">See credential</a>
 				</div>
 
 				<div class="col-lg-5">
-					<p class="tight"><t><img src="icone/stanford.png" height="50px" width="50px"/><a href="https://www.coursera.org/learn/machine-learning" target="_blank">Machine learning</a></t><br/>
+					<p class="tight"><t><img src="icone/stanford.png" height="50px" width="50px"/><a style="text-decoration:none;" href="https://www.coursera.org/learn/machine-learning" target="_blank"> Machine learning</a></t><br/>
 						Stanford University - Coursera<br> 
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->B6H2QETYY3S5
-					<!-- </p> -->
+					</p>
 					<p><more>- Supervised learning<br> 
 					  - Unsupervised learning<br> 
 					  - Best practices in ML (bias/variance, Evaluation)<!-- </more></p> --><br> 
-				<a href="https://www.coursera.org/account/accomplishments/certificate/B6H2QETYY3S5" target="_blank">See credential</a>
+				<a style="color:#ff0000;" href="https://www.coursera.org/account/accomplishments/certificate/B6H2QETYY3S5" target="_blank">See credential</a>
 				</div>
 
 	
 				<!-- EDIT: line 2-->
 				<div class="col-lg-5 col-lg-offset-2">
-					<p class="tight"><t><img src="icone/UMichigan.png" height="50px" width="50px"/><a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied data science with python specialization</a></t><br/>
+					<p class="tight"><t><img src="icone/UMichigan.png" height="50px" width="50px"/><a href="https://www.coursera.org/specializations/data-science-python" target="_blank"> Applied data science with python specialization</a></t><br/>
 						Michigan University - Coursera<br> 
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->MJSX57B8D6V8
 					<!-- </p> -->
@@ -185,14 +192,14 @@
 					  - Applied machine learning in python<br> 
 					  - Applied text mining in python<br> 
 					  - Social network analysis in python<!-- </more></p> --><br> 
-				<a href="https://www.coursera.org/account/accomplishments/specialization/certificate/MJSX57B8D6V8" target="_blank">See credential</a>
+				<a style="color:#ff0000;" href="https://www.coursera.org/account/accomplishments/specialization/certificate/MJSX57B8D6V8" target="_blank">See credential</a>
 				</div>
 
 				<div class="col-lg-5">
-					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/><a href="https://codewithmosh.com/p/python-programming-course-beginners" target="_blank">Complete Python Mastery</a></t><br/>
+					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/><a href="https://codewithmosh.com/p/python-programming-course-beginners" target="_blank"> Complete Python Mastery</a></t><br/>
 						MOSH Coding Simple<br>
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->cert_zkkvh81v</t><br/>
-					<a href="https://github.com/hassanrhanimi/hassanrhanimi.github.io/blob/master/certificatePython.pdf" target="_blank">See credential</a>
+					<a style="color:#ff0000;" href="https://github.com/hassanrhanimi/hassanrhanimi.github.io/blob/master/certificatePython.pdf" target="_blank">See credential</a>
 				</div>
 		</div><!--/.row -->
 		<!-- <br> -->
