--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</div>
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
-					<p><a href="https://github.com/hassanrhanimi/hassanrhanimi.github.io/blob/master/hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></i> <sm>RESUME PDF</sm></a></p>
+					<p><a href="./resume.html" target="_blank"><i class="icon-download-alt"></i> <sm>RESUME PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
@@ -199,7 +199,7 @@
 					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/><a href="https://codewithmosh.com/p/python-programming-course-beginners" target="_blank"> Complete Python Mastery</a></t><br/>
 						MOSH Coding Simple<br>
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->cert_zkkvh81v</t><br/>
-					<a style="color:#ff0000;" href="https://github.com/hassanrhanimi/hassanrhanimi.github.io/blob/master/certificatePython.pdf" target="_blank">See credential</a>
+					<a style="color:#ff0000;" href="./pythonCertificate.html" target="_blank">See credential</a>
 				</div>
 		</div><!--/.row -->
 		<!-- <br> -->
