--- a/pythonCertificate.html
+++ b/pythonCertificate.html
@@ -1,1 +1,1 @@
-<iframe src="./certificatePython.pdf" type="application/pdf" width=100% height=850px title='certificate'/>
+<embed src="./certificatePython.pdf" type="application/pdf" width=100% height=850px title='Python certificate'/>
