--- a/resume.html
+++ b/resume.html
@@ -1,2 +1,2 @@
 
-<iframe src="./hassanRHANIMI_resume.pdf" type="application/pdf" width=100% height=850px title='resume'/>
+<embed src="./hassanRHANIMI_resume.pdf" type="application/pdf" width=100% height=850px title='resume'/>
