--- a/resume.html
+++ b/resume.html
@@ -1,2 +1,2 @@
 
-<embed src="https://github.com/hassanrhanimi/hassanrhanimi.github.io/blob/master/hassanRHANIMI_resume.pdf" type="application/pdf" width=100% height=850px/>
+<embed src="hassanRHANIMI_resume.pdf" type="application/pdf" width=100% height=850px/>
