--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	  </tr>
 	  <tr>
 	    <td>Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics</td>
-	    <td style="vertical-align: top;">Python<br>Matlab<br>SQL<br>Numpy, Scipy,matplotlib, Scikit-learn<br>Linux<br>Git</td>
+	    <td style="vertical-align: top;">Python<br>Matlab<br>SQL<br>Numpy, Scipy,matplotlib, Scikit-learn<br>Linux<br>Git<br>Power BI<br>Tableau</td>
 	    <td style="vertical-align: top;">Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables</td>
 	  </tr>
 </table> -->
