update of index

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 				<!-- EDIT: line 1-->
 				<div class="col-md-3">
 					<t>Data science</t></br>
-						Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics
+						Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics<br>Distributed computing
 				</div>
 
 				<!-- EDIT: line 1-->
 				<div class="col-md-3 ">
 					<t>Languages & tools</t></br>
-						Python<br>Matlab<br>SQL<br>Numpy, Scipy, Matplotlib<br>Scikit-learn<br>Linux<br>Git
+						SQL<br>Python (Numpy, Scipy, Matplotlib<br>Pandas,Scikit-learn...)<br>Matlab<br>Linux<br>Git<br>PowerBI, Tableau<br>Apache spark<br>Databricks platform<br>Talend...
 				</div>
 
 				<!-- EDIT: line 1-->
