--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 				</div>
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
-					<p><a href="./resume.html" target="_blank"><i class="icon-download-alt"></i> <sm>RESUME PDF</sm></a></p>
+					<p><a href="./resume.html" target="_blank"><i class="icon-file"></i> <sm>RESUME PDF</sm></a>
+					<br><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></i></p>
 				</div>
 				
 			</div><!--/.row -->
