--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 		a, a:visited {
     color: inherit;}
 		</style>
-
-
   </head>
+
 
   <body>
 	
@@ -76,11 +75,11 @@
 	
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
 
-	<section id="about" name="about"></section>
+<!-- 	<section id="about" name="about"></section> -->
+
 	<div class="about">
 		<div class="container">
 			<div class="row">
-				
 				<div class="col-lg-1 col-lg-offset-0">
 					<h5>ABOUT</h5>
 				</div>
@@ -92,40 +91,21 @@
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
 					<p><a href="./resume.html" target="_blank"><i class="icon-file"></i> <sm>RESUME PDF</sm></a>
-					<br><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></i></p>
+					<br><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></i></a></p>
 				</div>
-				
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/ #intro -->
 
-
-	<section id="resume" name="resume"></section>
-
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
 
+	<section id="resume" name="resume"></section>
 <!-- Skills SECTION -->
 	<div class="container desc">
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-0">
 					<h5>SKILLS</h5>					
 				</div>
-<!-- <style>
-	table, th, td { border:1px solid black; }
-	td.description { vertical-align: top; }
-</style> -->
-<!-- <table style="width:80%">
-	  <tr>
-	    <th>Data science</th>
-	    <th>Languages & tools</th>
-	    <th>Others</th>
-	  </tr>
-	  <tr>
-	    <td>Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics</td>
-	    <td style="vertical-align: top;">Python<br>Matlab<br>SQL<br>Numpy, Scipy,matplotlib, Scikit-learn<br>Linux<br>Git<br>Power BI<br>Tableau</td>
-	    <td style="vertical-align: top;">Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables</td>
-	  </tr>
-</table> -->
 				<!-- EDIT: line 1-->
 				<div class="col-md-3">
 					<t>Data science</t></br>
@@ -148,8 +128,24 @@
 		<hr>
 	</div><!--/.container -->
 
-<!-- --------------------------------------------------------------------------------------------------------------------- -->
+<!-- <style>
+	table, th, td { border:1px solid black; }
+	td.description { vertical-align: top; }
+</style> -->
+<!-- <table style="width:80%">
+	  <tr>
+	    <th>Data science</th>
+	    <th>Languages & tools</th>
+	    <th>Others</th>
+	  </tr>
+	  <tr>
+	    <td>Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics</td>
+	    <td style="vertical-align: top;">Python<br>Matlab<br>SQL<br>Numpy, Scipy,matplotlib, Scikit-learn<br>Linux<br>Git<br>Power BI<br>Tableau</td>
+	    <td style="vertical-align: top;">Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables</td>
+	  </tr>
+</table> -->
 
+<!-- --------------------------------------------------------------------------------------------------------------------- -->
 	<!-- CERTIFICATES SECTION -->
 	<div class="container desc">
 		<div class="row">
@@ -365,5 +361,6 @@
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/ #footer -->
+
   </body>
 </html>
