French resume added

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 				</div>
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
-					<p><a href="./resume.html" target="_blank"><i class="icon-file"></i> <sm>RESUME PDF</sm></a>
-					<br><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></i></a></p>
+					<!-- <a href="./resume.html" target="_blank"><i class="icon-file"></i> <sm>RESUME PDF</sm></a> -->
+					<p><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"><sm>  English</sm></i></a>
+				  <br><a href="hassanRHANIMI_CV.pdf" target="_blank"><i class="icon-download-alt"><sm>  French</sm></i></a></p>
 				</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
