--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 
 		a, a:visited {
     color: inherit;}
+
+		.heading-1{
+		font-size: 350%!important;
+		line-height: 120%!important;
+		}
+
 		</style>
   </head>
 
@@ -62,12 +68,12 @@
 			<div class="row centered">
 				<div class="col-lg-8">
 					<!-- EDIT: name -->
-					<h1>Hassan RHANIMI</h1>
+					<h2 class="heading-1"> Hassan RHANIMI</h2>
 					<!-- EDIT: title | email -->
-					<h2>Junior data scientist</h2> <h3><a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>			
+					<h1 class="heading-1"> Data scientist</h1> <h3><a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>			
 				</div><!--/.col-lg-12 -->
 				<div class="col-lg-4 ">
-					<img src="icone/HassanRHANIMI.png" height="250px" width="200px"/>
+					<img src="icone/moi1_.png" height="250px" width="200px"/>
 				</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -85,18 +91,22 @@
 				</div>
 				<div class="col-lg-9 d">
 					<!-- EDIT: about -->
-					<p>I am a junior data scientist with an engineering background. I'm passionate about coding, math and data. I am very comfortable with handling data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>
-					I master important machine learning algorithms theory/application and above all, I learn easily and know where and how to quickly search for information or acquire new needed skills.</p>
+					<p>I am data scientist with an engineering background. I had the chance of working in different industrial sectors on interesting subjects. I can help you in the exploitation of your data to resolve issues, pull business insights and bring added value translated by growth.</p>
+
+					<!-- 	I'm passionate about coding, math and AI technologies. I am very comfortable with handling data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>
+					I master important machine learning algorithms theory/application and above all, I learn easily and know where and how to quickly search for information or acquire new needed skills. -->
 				</div>
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
 					<!-- <a href="./resume.html" target="_blank"><i class="icon-file"></i> <sm>RESUME PDF</sm></a> -->
-					<p><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"><sm>  English</sm></i></a>
-				  <br><a href="hassanRHANIMI_CV.pdf" target="_blank"><i class="icon-download-alt"><sm>  French</sm></i></a></p>
+					<p><a href="DS_hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></a></i><a href="./resume.html" target="_blank"><i class="icon-file"></i></a> <img src="icone/us.png" height="11px" width="16px"/><sm> CV</sm>
+				  <br><a href="DS_hassanRHANIMI_CV.pdf" target="_blank"><i class="icon-download-alt"></i></a> <img src="icone/fr.png" height="11px" width="16px"/><sm> CV</sm></p>
 				</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/ #intro -->
+
+
 
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
 
@@ -110,20 +120,18 @@
 				<!-- EDIT: line 1-->
 				<div class="col-md-3">
 					<t>Data science</t></br>
-						Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics<br>Distributed computing
-				</div>
+						Need & Specifications understanding<br>Data wrangling<br>Data visualization<br>Data Analysis<br>End-to-end machine learning<br>NLP<br>Statistics</div>
 
 				<!-- EDIT: line 1-->
 				<div class="col-md-3 ">
 					<t>Languages & tools</t></br>
-						SQL<br>Python (Numpy, Scipy, Matplotlib<br>Pandas,Scikit-learn...)<br>Matlab<br>Linux<br>Git<br>PowerBI, Tableau<br>Apache spark<br>Databricks platform<br>Talend...
+						Python<br>SQL<br>PowerBI<br>Talend<br>Apache spark<br>Databricks platform
 				</div>
 
 				<!-- EDIT: line 1-->
 				<div class="col-md-3">
 					<t>Others</t></br>
-						Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Deliverables of high quality
-				</div>
+						Rigor<br>Reliable<br>Adaptability</div>
 		</div><!--/.row -->
 		<br>
 		<hr>
@@ -217,9 +225,9 @@
 					<p class="tight"><t>Industrial engineer </t><br/>
 						<img src="icone/aptar.png" height="50px" width="60px"/> Aptar-Pharma</p>
 					<p><more>- Monitoring of the development of a new valve<br> 
-						- Data analysis (measurement and release tests data)<br> 
+						- Data analysis (measurement of dimensions and release tests data)<br> 
 						- Technical support to capacity increase (new molds)<br> 
-						- Resolution of manufacturing plant issues<br> 
+						- Resolution of manufacturing plant issues with data<br> 
 						- Management of the switch to 3D measurement methods</more></p>
 				</div>
 				<div class="col-lg-3">
@@ -230,7 +238,7 @@
 				
 				<!-- EDIT: work line 2-->
 				<div class="col-lg-7 col-lg-offset-2">
-					<p class="tight"><t>Mechanical engineer</t><br/>
+					<p class="tight"><t>Mechanical and data engineer</t><br/>
 						<img src="icone/CEA.png" height="40px" width="50px"/> CEA <br/>
 					</p>
 					<p><more>- Modeling of the austenitic stainless steel behavior<br> 
@@ -276,7 +284,7 @@
 					<img src="icone/mines.png" height="50px" width="70px"/>
 				</div> -->
 				<div class="col-lg-7">
-					<p><t>M. Sc. : "Materials & Structures Design"</t><br>
+					<p><t>M. Science. : "Materials & Structures Design"</t><br>
 								<img src="icone/mines.png" height="50px" width="50px"/> Mines ParisTech</p>
 				</div>
 				<div class="col-lg-3">
