--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
     color: inherit;}
 
 		.heading-1{
-		font-size: 350%!important;
-		line-height: 120%!important;
+		font-size: 400%!important;
+		line-height: 110%!important;
+		}
+
+		.heading-2{
+		font-size: 200%!important;
+		line-height: 100%!important;
 		}
 
 		</style>
@@ -68,7 +73,7 @@
 			<div class="row centered">
 				<div class="col-lg-8">
 					<!-- EDIT: name -->
-					<h2 class="heading-1"> Hassan RHANIMI</h2>
+					<h2 class="heading-2"> Hassan RHANIMI</h2>
 					<!-- EDIT: title | email -->
 					<h1 class="heading-1"> Data scientist</h1> <h3><a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>			
 				</div><!--/.col-lg-12 -->
