--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				</div>
 				<!-- EDIT: work line 1 -->
 				<div class="col-lg-7">
-					<p class="tight"><t>Industrial engineer </t><br/>
+					<p class="tight"><t>Industrial data engineer </t><br/>
 						<img src="icone/aptar.png" height="50px" width="60px"/> Aptar-Pharma</p>
 					<p><more>- Monitoring of the development of a new valve<br> 
 						- Data analysis (measurement of dimensions and release tests data)<br> 
@@ -243,7 +243,7 @@
 				
 				<!-- EDIT: work line 2-->
 				<div class="col-lg-7 col-lg-offset-2">
-					<p class="tight"><t>Mechanical and data engineer</t><br/>
+					<p class="tight"><t>Mechanical engineer</t><br/>
 						<img src="icone/CEA.png" height="40px" width="50px"/> CEA <br/>
 					</p>
 					<p><more>- Modeling of the austenitic stainless steel behavior<br> 
