--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				</div>
 				<!-- EDIT: work line 1 -->
 				<div class="col-lg-7">
-					<p class="tight"><t>Industrial data engineer </t><br/>
+					<p class="tight"><t>Industrial engineer </t><br/>
 						<img src="icone/aptar.png" height="50px" width="60px"/> Aptar-Pharma</p>
 					<p><more>- Monitoring of the development of a new valve<br> 
 						- Data analysis (measurement of dimensions and release tests data)<br> 
