--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</div>
 				<div class="col-lg-9 d">
 					<!-- EDIT: about -->
-					<p>I am data scientist with an engineering background. I had the chance of working in different industrial sectors on interesting subjects. I can help you in the exploitation of your data to resolve issues, pull business insights and bring added value translated by growth.</p>
+					<p>I am data scientist with an engineering background. I had the chance of working on interesting subjects in different industrial sectors. I can help you in the exploitation of your data to resolve issues, pull business insights and bring added value translated by growth.</p>
 
 					<!-- 	I'm passionate about coding, math and AI technologies. I am very comfortable with handling data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>
 					I master important machine learning algorithms theory/application and above all, I learn easily and know where and how to quickly search for information or acquire new needed skills. -->
@@ -164,7 +164,7 @@
 	<div class="container desc">
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-0">
-					<h5>DATA SCIENCE CERTIFICATES</h5>					
+					<h5>DATA CERTIFICATES</h5>					
 				</div>
 
 				<!-- EDIT: line 1-->
@@ -192,7 +192,7 @@
 				</div>
 
 	
-				<!-- EDIT: line 2-->
+<!------EDIT: line 2 -->
 				<div class="col-lg-5 col-lg-offset-2">
 					<p class="tight"><t><img src="icone/UMichigan.png" height="50px" width="50px"/><a href="https://www.coursera.org/specializations/data-science-python" target="_blank"> Applied data science with python specialization</a></t><br/>
 						Michigan University - Coursera<br> 
@@ -212,6 +212,38 @@
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->cert_zkkvh81v</t><br/>
 					<a style="color:#ff0000;" href="./pythonCertificate.html" target="_blank">See credential</a>
 				</div>
+
+<!------EDIT: line 3 -->
+				<div class="col-lg-10 col-lg-offset-2">
+					<p class="tight"><t><img src="icone/ibm.png" height="50px" width="50px"/><a href="https://www.coursera.org/professional-certificates/ibm-data-engineer?" target="_blank"> IBM Data Engineering Specialization (in progress)</a></t><br/>
+						IBM- Coursera<br> 
+						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->.....
+
+				<!-- EDIT: column 1-->
+					<div class="col-md-5 ">
+						<a href="...." target="_blank">- Introduction to Data Engineering</a>  
+					  <br><a href="...." target="_blank">- Python for Data Science, AI & Development</a> 
+					  <br><a href="...." target="_blank">- Python Project for Data Engineering</a> 
+					  <br><a href="...." target="_blank">- Introduction to Relational Databases (RDBMS)</a> 
+					  <br><a href="...." target="_blank">- Databases and SQL for Data Science with Python</a> 
+					  <br><a href="...." target="_blank">- Introduction to NoSQL Databases</a> 
+					  <br><a href="...." target="_blank">- Introduction to Big Data with Spark and Hadoop</a> 
+					  <br><a style="color:#ff0000;" href="...." target="_blank">See credential</a></div>
+
+				<!-- EDIT: column 2-->
+				<div class="col-md-6 ">
+						<a href="...." target="_blank">- Data Engineering and Machine Learning using Spark</a> 
+					  <br><a href="...." target="_blank">- Hands-on Introduction to Linux Commands and Shell Scripting</a> 
+					  <br><a href="...." target="_blank">- Relational Database Administration (DBA)</a>
+					  <br><a href="...." target="_blank">- ETL and Data Pipelines with Shell, Airflow and Kafka</a>
+					  <br><a href="...." target="_blank">- Getting Started with Data Warehousing and BI Analytics</a>
+					  <br><a href="...." target="_blank">- Data Engineering Capstone Project</a></div>
+				
+				</div>
+
+
+
+
 		</div><!--/.row -->
 		<!-- <br> -->
 		<hr>
