--- a/pythonCertificate.html
+++ b/pythonCertificate.html
@@ -1,1 +1,1 @@
-<embed src="./certificatePython.pdf" type="application/pdf" width=100% height=850px/>
+<embed src="./certificatePython.pdf" type="application/pdf" width=100% height=100%/>
