--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
 					<!-- <a href="./resume.html" target="_blank"><i class="icon-file"></i> <sm>RESUME PDF</sm></a> -->
-					<p><a href="_hR_resume.pdf" target="_blank"><i class="icon-download-alt"></a></i><a href="./resume.html" target="_blank"><i class="icon-file"></i></a> <img src="icone/us.png" height="11px" width="16px"/><sm> CV</sm>
-				  
-				  <br><a href="_hR_CV.pdf" target="_blank"><i class="icon-download-alt"></i></a> <img src="icone/fr.png" height="11px" width="16px"/><sm> CV</sm></p>
+					<p><a href="_hR_resume.pdf" target="_blank"><i class="icon-download-alt"></a></i><a href="./resume.html" target="_blank"><i class="icon-file"></i></a> <img src="icone/us.png" height="11px" width="16px"/><sm> CV</sm><br><a href="_hR_CV.pdf" target="_blank"><i class="icon-download-alt"></i></a> <img src="icone/fr.png" height="11px" width="16px"/><sm> CV</sm></p>
 				</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
