--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,1 @@
-<embed src="_hR_resume.pdf" type="application/pdf" width=100% height=100%/>
+<embed src="./HR_resume.pdf" type="application/pdf" width=100% height=100%/>
