--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</div>
 				<div class="col-lg-9 d">
 					<!-- EDIT: about -->
-					<p>I am data consultant with an engineering background. I had the chance of working on interesting subjects in different industrial sectors. I can help you in the exploitation of your data to resolve issues, pull business insights and bring added value translated by growth.</p>
+					<p>I am a data consultant with an engineering background. I had the chance of working on interesting subjects in different industrial sectors. I can help you in the exploitation of your data to resolve issues, pull business insights and bring added value translated by growth.</p>
 
 					<!-- 	I'm passionate about coding, math and AI technologies. I am very comfortable with handling data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>
 					I master important machine learning algorithms theory/application and above all, I learn easily and know where and how to quickly search for information or acquire new needed skills. -->
@@ -191,7 +191,7 @@
 					  <br><!-- <a href="...." target="_blank"> -->- Getting Started with Data Warehousing and BI Analytics (IP)<!-- </a> -->
 					  <br><!-- <a href="...." target="_blank"> -->- Data Engineering Capstone Project (IP)<!-- </a> -->
 					  <!-- <br><a style="color:#ff0000;" href="...." target="_blank">See credential</a> -->
-          <br><br><br><t><img src="icone/stanford.png" height="50px" width="50px"/><a style="text-decoration:none;" href="https://www.coursera.org/learn/machine-learning" target="_blank"> Machine learning</a></t><br/>
+          <br><br><t><img src="icone/stanford.png" height="50px" width="50px"/><a style="text-decoration:none;" href="https://www.coursera.org/learn/machine-learning" target="_blank"> Machine learning</a></t><br/>
 						Stanford University - Coursera 
 						<!-- Credential ID : <t style="color:rgba(175, 238, 238,1);">B6H2QETYY3S5 -->
 					<!-- </p> -->
