--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				</div>
 
 				<div class="col-lg-5">
-					<t><img src="icone/ibm.png" height="50px" width="50px"/><a href="https://www.coursera.org/professional-certificates/ibm-data-engineer?" target="_blank"> IBM Data Engineering Specialization (8 of 13 completed)</a></t><br>
+					<t><img src="icone/ibm.png" height="50px" width="50px"/><a href="https://www.coursera.org/professional-certificates/ibm-data-engineer?" target="_blank"> IBM Data Engineering Specialization (9/13 completed)</a></t><br>
 					IBM - Coursera
 					<!-- <br>Credential ID : <t style="color:rgba(175, 238, 238,1);">..... -->
 						<br><a href="https://www.coursera.org/account/accomplishments/certificate/BEBMC7P49YJL" target="_blank">- Introduction to Data Engineering</a>  
@@ -187,7 +187,7 @@
 						<br><a href="https://www.coursera.org/account/accomplishments/certificate/QYEVCD53LQMY" target="_blank">- Data Engineering and Machine Learning using Spark</a> 
 					  <br><a href="https://www.coursera.org/account/accomplishments/certificate/VCJ9HQNZGXWL" target="_blank">- Hands-on Introduction to Linux Commands and Shell Scripting</a> 
 					  <br><!-- <a href="...." target="_blank"> -->- Relational Database Administration (IP)<!-- </a> -->
-					  <br><!-- <a href="...." target="_blank"> -->- ETL and Data Pipelines with Shell, Airflow and Kafka (IP)<!-- </a> -->
+					  <br><a href="https://www.coursera.org/account/accomplishments/certificate/RRDWBRJLLHF7" target="_blank">- ETL and Data Pipelines with Shell, Airflow and Kafka</a>
 					  <br><!-- <a href="...." target="_blank"> -->- Getting Started with Data Warehousing and BI Analytics (IP)<!-- </a> -->
 					  <br><!-- <a href="...." target="_blank"> -->- Data Engineering Capstone Project (IP)<!-- </a> -->
 					  <!-- <br><a style="color:#ff0000;" href="...." target="_blank">See credential</a> -->
@@ -247,45 +247,43 @@
 				<!-- EDIT: work line 1 -->
 				<div class="col-lg-7">
 					<p class="tight"><t>Industrial engineer </t><br/>
-						<img src="icone/aptar.png" height="40px" width="50px"/> Aptar-Pharma<br>
+						<img src="icone/aptar.png" height="40px" width="50px"/> Aptar-Pharma<br></p>
 					  - Monitoring of the development of a new valve<br> 
 						- Data analysis (measurement of dimensions and release tests data)<br> 
 						- Technical support to capacity increase (new molds)<br> 
 						- Resolution of manufacturing plant issues with data<br> 
-						- Management of the switch to 3D measurement methods</p>
+						- Management of the switch to 3D measurement methods<br><br>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>Jul 2018 - Aug 2020 <br />
-					 Val-de-reuil - France</sm><br />
+					 <p><sm>Jul 2018 - Aug 2020 <br>
+					 Val-de-reuil - France</sm></p><br>
 				</div>
 				
 				<!-- EDIT: work line 2-->
 				<div class="col-lg-7 col-lg-offset-2">
-					<p class="tight"><t>Mechanical engineer</t><br/>
-						<img src="icone/CEA.png" height="40px" width="50px"/> CEA <br/>
-					</p>
-					<p><more>- Modeling of the austenitic stainless steel behavior<br> 
+					<p class="tight"><t>Mechanical engineer</t><br>
+						<img src="icone/CEA.png" height="40px" width="50px"/> CEA <br></p>
+				    - Modeling of the austenitic stainless steel behavior<br> 
 						- Specific tests on specimens cutted from the structure<br> 
-						- Data wrangling and identification of the model parameters</more></p>
+						- Data wrangling and identification of the model parameters<br><br>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>Mar 2017 - Sep 2017 <br />
-					Cadarache - France</sm><br/>
+					Cadarache - France</sm></p><br/>
 					<!-- <img src="icone/CEA.png" height="70px" width="100px"/> -->
 				</div>
 
 								<!-- EDIT: work line 3 -->
 				<div class="col-lg-7 col-lg-offset-2">
 					<p class="tight"><t>Junior project manager </t><br/>
-						 <img src="icone/renault.png" height="40px" width="50px"/> Renault<br/>
-					</p>
-					<p><more>- Integration of Additive Manufacturing processes to manufacture functional prototypes<br> 
+						 <img src="icone/renault.png" height="40px" width="50px"/> Renault<br/></p>
+					  - Integration of Additive Manufacturing processes to manufacture functional prototypes<br> 
 						- Manage suppliers on the manufacturing of samples<br> 
-						- Design & development of a «Decision support system for the choice of the AM process» with VBA</more></p>
+						- Design & development of a «Decision support system for the choice of the AM process» with VBA<br>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>Mar 2016 - Sep 2016 <br/>
-					 Guyancourt - France</sm>
+					 Guyancourt - France</sm></p>
 					 <!-- <img src="icone/renault.png" height="70px" width="100px"/> -->
 				</div>
 		</div><!--/.row -->
